--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.CapstoneProject"
         tools:targetApi="31">
         <activity
+            android:name=".ui.biometric.BiometricActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.articles.detail_article.DetailArticleActivity"
             android:exported="false" />
         <activity
