--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-feature
         android:name="android.hardware.telephony"
@@ -22,8 +22,7 @@
         android:roundIcon="@drawable/wownetlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.CapstoneProject"
-        tools:targetApi="31">
-
+        tools:targetApi="31" >
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -39,6 +38,10 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCx4EGtGSBurUtNPvbRmLw9u8rSPJcIssU" />
 
+
+        <activity
+            android:name=".ui.otp.OTPMobileActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.profile.edit_profile.EditProfileActivity"
             android:exported="false" />
@@ -61,7 +64,7 @@
             android:name=".ui.wifi.WifiActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.otp.OTPActivity"
+            android:name=".ui.otp.OTPEmailActivity"
             android:exported="false" />
         <activity
             android:name=".ui.register.RegisterActivity"
@@ -75,7 +78,7 @@
         <activity
             android:name=".ui.splash.SplashActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
