--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CapstoneProject"
         tools:targetApi="31">
-        <activity
-            android:name=".ui.login.resetPasswordActivity"
-            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -41,6 +38,12 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCx4EGtGSBurUtNPvbRmLw9u8rSPJcIssU" />
 
+        <activity
+            android:name=".ui.chat.ChatActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.resetPasswordActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.otp.OTPMobileActivity"
             android:exported="false" />
